[release/v20140815] fix loading-spinner overflow on toolbarModal slidebox

--- a/src/assets/scss/component/toolbar-modal.scss
+++ b/src/assets/scss/component/toolbar-modal.scss
@@ -152,6 +152,7 @@ $dark-blue: #001324;
 		position:                   absolute;
 		width:                      100%;
 		z-index:                    71;
+        display:                    table; // hack for loading-spinner overflow. 
 
 		&.show {
 			box-shadow: 0 4px 10px rgba(0,0,0,.6);
